--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 <body>
     <main role="main" class="container extra-bottom">
         <h1 class="mt-5 text-center text-primary">Betsol To Do </h1>
-        <p class="text-muted">BETSOL To-Do makes it easier for you to plan your work by using online to-do list App.</p>
+        <p class="text-muted">To-Do makes it easier for you to plan your work by using online to-do list App.</p>
     </main>
     <div class="container">
         <!-- Button trigger modal -->
@@ -108,7 +108,7 @@
                             data-source="{{item.id}}">{{item.status}}</button></td>
                     {%endif%}
                     {% if item.status == "Completed" %}
-                    <td><button type="button" class="btn btn-outline-danger btn-sm state" disabled
+                    <td><button type="button" class="btn btn-outline-danger btn-sm state" 
                             data-source="{{item.id}}">{{item.status}}</button></td>
                     {%endif%}
 
@@ -116,8 +116,8 @@
                             data-bs-target="#edit-task-modal" data-source="{{item.id}}" data-content="{{item.task}}"><i
                                 class="fa fa-pen fa-1" aria-hidden="true"></i></button></td>
 
-                    <td><button class="btn btn-outline-secondary btn-sm remove" data-source="{{item.id}}"
-                            type="button">Delete</button></td>
+                                <td><button class="btn btn-outline-secondary btn-sm remove" data-source="{{item.id}}"
+                                    type="button"><i class="fa fa-trash"></i></button></td>
                 </tr>
                 {% endfor %}
 
@@ -129,7 +129,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="text-muted"><small>BETSOL Copyright © 2022. ® All Rights Reserved.`</small></p>
+            <p class="text-muted"><small>KH Copyright © 2022. ® All Rights Reserved.`</small></p>
         </div>
     </footer>
 </body>
