--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <main role="main" class="container extra-bottom">
-        <h1 class="mt-5 text-center text-primary">Betsol To Do </h1>
+        <h1 class="mt-5 text-center text-primary">To Do </h1>
         <p class="text-muted">To-Do makes it easier for you to plan your work by using online to-do list App.</p>
     </main>
     <div class="container">
